Fixed behavior on Firefox / polyfilled browsers (tests + styles).

--- a/basic-components/basic-input-decorator.css
+++ b/basic-components/basic-input-decorator.css
@@ -20,5 +20,5 @@ label > span {
 
 ::content input, 
 ::content *[is-form-input] {
-	width: 100%;
+	width: 100% !important;
 }
